// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RoleDetails should render 1`] = `
.emotion-0 {
  margin: 20px 0;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
}

.emotion-2 {
  padding-right: 50px;
}

.emotion-3 {
  font-weight: 600;
}

.emotion-4 {
  color: #9a9a9a;
  font-size: 12px;
  text-transform: uppercase;
}

<div
  class="emotion-0"
  data-testid="collection-details"
>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-3"
      >
        2020-02-12 21:44 UTC
      </div>
      <div
        class="emotion-4"
      >
        MODIFIED DATE
      </div>
    </div>
    <div
      class="emotion-2"
    >
      <div
        class="emotion-3"
      >
        N/A
      </div>
      <div
        class="emotion-4"
      >
        REVIEWED DATE
      </div>
    </div>
  </div>
</div>
`;

exports[`RoleDetails should render with mock data 1`] = `
.emotion-0 {
  margin: 20px 0;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
}

.emotion-2 {
  padding-right: 50px;
}

.emotion-3 {
  font-weight: 600;
}

.emotion-4 {
  color: #9a9a9a;
  font-size: 12px;
  text-transform: uppercase;
}

<div
  class="emotion-0"
  data-testid="collection-details"
>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-3"
      >
        2020-12-01 21:44 UTC
      </div>
      <div
        class="emotion-4"
      >
        MODIFIED DATE
      </div>
    </div>
    <div
      class="emotion-2"
    >
      <div
        class="emotion-3"
      >
        2020-12-01 21:44 UTC
      </div>
      <div
        class="emotion-4"
      >
        REVIEWED DATE
      </div>
    </div>
  </div>
</div>
`;
